--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.5.0",
+    "@tailwindcss/postcss": "^4.2.1",
     "@types/three": "^0.183.1",
     "autoprefixer": "^10.4.27",
     "framer-motion": "^12.34.3",
